Fix issue with SelectionList on IE6 - seems it needs hasLayout or it doesn't render the highlights properly.
git-svn-id: https://emite.googlecode.com/svn/trunk/hablar@1488 87f8d446-a148-0410-9e96-a52f46714620

--- a/war/ie6.css
+++ b/war/ie6.css
@@ -26,3 +26,7 @@
 .hablar-Header.unattended.blinkOn {
     background-color: highlight;
 }
+
+.hablar-SelectionList {
+	zoom: 1;
+}
